--- a/pub.html
+++ b/pub.html
@@ -62,6 +62,22 @@ td.papers {
   <tbody>
 	  
 	<tr>
+		<td class="date"><font color="#083b89">HotOS'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Kernel extension verification is untenable</strong> [<a href="pub/iu.pdf" target="_blank">pdf</a> | <a href="pub/iu_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jinghao Jia, Raj Sahu, Adam Oswald, Dan Williams, Michael V. Le, and Tianyin Xu
+						  <br>
+						  To appear in Proceedings of the 19th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XIX</b></font>), Providence, RI, June 2022.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
+	  
+	<tr>
 		<td class="date"><font color="#083b89">OSDI'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
