--- a/pub.html
+++ b/pub.html
@@ -104,6 +104,8 @@ td.papers {
 						  Jovan Stojkovic, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
 						  <br>
 						  In Proceedings of the 50th Annual International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'23</b></font>), Orlando, FL, June 2023.
+						  <br>
+						  Data/code: <a href="https://github.com/xlab-uiuc/mxfaas" target="_blank">https://github.com/xlab-uiuc/mxfaas</a>
 					  </span>
 				  </div>
 		  </td>
