--- a/pub.html
+++ b/pub.html
@@ -124,6 +124,8 @@ td.papers {
 						  In Proceedings of the 18th European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'23</b></font>), Rome, Italy, May 2023.
 						  <br>
 						  Data/code: <a href="https://github.com/xlab-uiuc/csi-ae" target="_blank">https://github.com/xlab-uiuc/csi-ae</a>
+						  <br>
+						  <font color="#C40233"><b>Gilles Muller Best Artifact Award</b></font>
 					  </span>
 				  </div>
 		  </td>
