--- a/pub.html
+++ b/pub.html
@@ -67,7 +67,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Kernel extension verification is untenable</strong> [<a href="pub/iu.pdf" target="_blank">pdf</a> | <a href="pub/iu_bib.txt" target="_blank">bib</a>]
+						  <strong>Kernel extension verification is untenable</strong> [<a href="pub/rust-kernel-ext.pdf" target="_blank">pdf</a> | <a href="pub/rust-kernel-ext_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Jinghao Jia, Raj Sahu, Adam Oswald, Dan Williams, Michael V. Le, and Tianyin Xu
 						  <br>
