--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
 				      <!--
 				                                <p class="STYLE223"><a href="https://whentojump.xyz/" target="_blank">Wentao Zhang</a>, MS student (SJTU) (Summer 2022 - now)</p>
--->
-								<!-- <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yifei Song</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p> -->
-				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergrad student (UIUC/NYCU) (Spring 2023 - now)</p>
+				      -->
+				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate student (UIUC/NYCU) (Spring 2023 - now)</p>
+				                                <p class="STYLE223"><a href="https://github.com/ZichengMa" target="_blank">Zicheng Ma</a>, Undergraduate student (ZJUI) (Summer 2023 - now)</p>
 				      <!--
 								<p class="STYLE223"><a href="https://tseyanghub.github.io/" target="_blank">Ze Yang</a>, Undergrad student (ZJUI) (Summer 2022 - now)</p>
 				      -->
