--- a/index.html
+++ b/index.html
@@ -558,8 +558,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS 2023, co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a> &rarr; Apple (Cloud Infra)</p>
-				  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS 2023 &rarr; Meta (Dev Infra)</p>
+				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS 2023 (<a href="pub/LUO-THESIS-2023.pdf" target="_blank">thesis</a>), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a> &rarr; Apple (Cloud Infra)</p>
+				  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS 2023 (<a href="pub/THAKKAR-THESIS-2023.pdf" target="_blank">thesis</a>) &rarr; Meta (Dev Infra)</p>
 				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
@@ -572,19 +572,19 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS)</p>    
 				  <p class="STYLE223"><a href="https://www.cs.columbia.edu/~kele/" target="_blank">Kele Huang</a> (CAS), Summer 2021 &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE223"><a href="https://fanweneddie.github.io/" target="_blank">Wen Fan</a> (USTC), Summer 2021 &rarr; Purdue University (PhD)</p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="https://www.ideals.illinois.edu/handle/2142/113272" target="_blank">thesis</a>) &rarr; Trend Micro</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (<a href="pub/CHEN-THESIS-2021.pdf" target="_blank">thesis</a>) &rarr; Trend Micro</p>
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BE 2021,
 					  awarded 
 					  <a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a> and 
 					  <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a> &rarr; Google (kernel)</p>
 				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; Switched to the AI/ML area after two years, in 2021 </p>
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (<a href="https://www.ideals.illinois.edu/handle/2142/110716" target="_blank">thesis</a>), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, awarded <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (<a href="pub/YOO-THESIS-2021.pdf" target="_blank">thesis</a>), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, awarded <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), visiting PhD student, 2019--2020 &harr; NUDT</p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
-				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>), awarded <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) &rarr; ByteDance (ML Infra) </p>
+				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="pub/CHEN-THESIS-2020.pdf" target="_blank">thesis</a>), awarded <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) &rarr; ByteDance (ML Infra) </p>
 				  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS)</p>    
-				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
+				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="pub/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
                              </TD>
                           </TR>
 
