--- a/pub.html
+++ b/pub.html
@@ -71,7 +71,11 @@ td.papers {
 						  <br>
 						  Jinghao Jia, Raj Sahu, Adam Oswald, Dan Williams, Michael V. Le, and Tianyin Xu
 						  <br>
-						  To appear in Proceedings of the 19th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XIX</b></font>), Providence, RI, June 2023.
+						  In Proceedings of the 19th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XIX</b></font>), Providence, RI, June 2023.
+						  <br>
+						  <font color="#C40233">
+					            <b><a href="https://news.ycombinator.com/item?id=36438831" target="_blank">Hacker News</a></b>
+					          </font>
 					  </span>
 				  </div>
 		  </td>
