--- a/travel.html
+++ b/travel.html
@@ -361,6 +361,7 @@ div.Section1
 						<li><font color="#083b89"><b>United States</b></font>:
                                                   <ul style="list-style-type:circle">
 						     <li>Aberdeen, WA (2018) </li>
+						     <li>Albany, NY (2023) </li>
 						     <li>Alexandria, VA (2018) </li>
 						     <li>Annapolis, MD (2017) </li>
 					             <li>Arlington, VA (2018) </li>
@@ -371,7 +372,7 @@ div.Section1
 						     <li>Big Sur, CA (2017) </li>
 					             <li>Bloomington, IL (2020) </li>
 						     <li>Bloomington, IN (2021) </li>
-                                                     <li>Boston, MA (2019) </li>
+                                                     <li>Boston, MA (2019, 2023) </li>
 						     <li>Broomfield, CO (2014) </li>
 						     <li>Carmel-by-the-Sea, CA (2017) </li>
 						     <li>Cheyenne, WY (2018) </li>
@@ -392,10 +393,12 @@ div.Section1
 						     <li>Gatlinburg, TN (2022) </li>
 						     <li>Gibson City, IL (2023) </li>
 						     <li>Green Bay, WI (2022) </li>
+						     <li>Hartford, CT (2023) </li>
 						     <li>Hibbing, MN (2022) </li>
 						     <li>Honolulu/O'ahu, HI (2022) </li>
 						     <li>Indianapolis, IN (2021) </li>  
 						     <li>Irvine, CA (2016) </li>
+						     <li>Ithaca, NY (2023) </li>
 						     <li>Keystone, SD (2018) </li>
 						     <li>Knoxville, TN (2022) </li>
 						     <li>Lake Tahoe, CA / NV (2018) </li>
@@ -412,11 +415,14 @@ div.Section1
 						     <li>Morro Bay, CA (2017) </li>
 						     <li>Nashville, TN (2022) </li>
 						     <li>Newark, CA (2017-2018) </li>
+						     <li>New Port, RI (2023) </li>
 						     <li>New York City, NY (2017, 2022) </li>
 						     <li>Oakland, CA (2018) </li>
+						     <li>Orlando, FL (2023) </li>
 						     <li>Omaha, NE (2018) </li>
 						     <li>Pasadena, CA (2015) </li>
 						     <li>Placerville, CA (2018) </li>
+						     <li>Providence, RI (2023) </li>
 						     <li>Rapid City, SD (2018) </li>
 						     <li>Reno, NV (2018) </li>
 						     <li>Rock Springs, WY (2018) </li>
@@ -440,7 +446,7 @@ div.Section1
 					             <li>St. Louis, MO (2021) </li>
 						     <li>State College, PA (2017) </li>
 						     <li>Sunnyvale, CA (2012, 2015) </li>
-						     <li>Urbana-Champaign, IL (2017)</li>
+						     <li>Champaign-Urbana, IL (2017)</li>
 						     <li>White Plains, NY (2022) </li>
                                                   </ul>
                                                 </li>
