--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				      <!--
 				                                <p class="STYLE223"><a href="https://whentojump.xyz/" target="_blank">Wentao Zhang</a>, MS student (SJTU) (Summer 2022 - now)</p>
 				      -->
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Visiting Scholar (Summer 2023 - now)</p>
 				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate student (UIUC/NYCU) (Spring 2023 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiajun (Kashun) Cheng</a>, Undergraduate student (ShanghaiTech) (Summer 2023 - now)</p>
 				                                <p class="STYLE223"><a href="https://github.com/ZichengMa" target="_blank">Zicheng Ma</a>, Undergraduate student (ZJUI) (Summer 2023 - now)</p>
@@ -569,7 +570,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD student, currently on leave at Microsoft Research Asia</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a>, M.Eng 2022 &rarr; Databricks &rarr; Anyscale</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
-				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, research scholar, 2021--2022 &rarr; UIUC (MS)</p> 
+				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research Scholar, 2021--2022 &rarr; UIUC (MS)</p> 
 				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS)</p>    
 				  <p class="STYLE223"><a href="https://www.cs.columbia.edu/~kele/" target="_blank">Kele Huang</a> (CAS), Summer 2021 &rarr; Columbia University (PhD)</p>
