--- a/index.html
+++ b/index.html
@@ -478,6 +478,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                   <p class="STYLE223">2023
 		    <a href="https://www.usenix.org/conference/osdi23" target="_blank">OSDI</a>,
 	            <a href="https://www.usenix.org/conference/nsdi23" target="_blank">NSDI</a>,
+	            <a href="https://sysdw23.github.io/" target="_blank">SOSP DW</a>,
+	            <a href="https://sosp2023.mpi-sws.org/cfsrc.html" target="_blank">SOSP SRC</a>,
 	            <a href="https://dsn2023.dei.uc.pt/" target="_blank">DSN</a>,
 		    <a href="https://www.sigmetrics.org/sigmetrics2023/" target="_blank">Sigmetrics</a>,
 		    <a href="https://2023.esec-fse.org/track/fse-2023-industry" target="_blank">ESEC/FSE Industry Track</a>,
