--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				      <!--
 				                                <p class="STYLE223"><a href="https://whentojump.xyz/" target="_blank">Wentao Zhang</a>, MS student (SJTU) (Summer 2022 - now)</p>
 				      -->
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Visiting Scholar (Summer 2023 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
 				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate student (UIUC/NYCU) (Spring 2023 - now)</p>
 				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiajun (Kashun) Cheng</a>, Undergraduate student (ShanghaiTech/Berkeley) (Summer 2023 - now)</p>
 				                                <p class="STYLE223"><a href="https://github.com/ZichengMa" target="_blank">Zicheng Ma</a>, Undergraduate student (ZJUI) (Summer 2023 - now)</p>
