--- a/pub.html
+++ b/pub.html
@@ -74,7 +74,7 @@ td.papers {
 						  In Proceedings of the 19th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XIX</b></font>), Providence, RI, June 2023.
 						  <br>
 						  <font color="#C40233">
-					            <b><a href="https://news.ycombinator.com/item?id=36438831" target="_blank">Hacker News</a></b>
+					            <b>Covered by <a href="https://news.ycombinator.com/item?id=36438831" target="_blank">Hacker News</a></b>
 					          </font>
 					  </span>
 				  </div>
@@ -91,7 +91,7 @@ td.papers {
 						  <br>
 						  Xiang (Jenny) Ren, Sitao Wang, Zhuqi Jin, David Lion, Adrian Chiu, Tianyin Xu, and Ding Yuan
 						  <br>
-						  To appear in Proceedings of the 17th USENIX Symposium on Operating Systems Design and Implementation  (<font color="#083b89"><b>OSDI'23</b></font>), Boston, MA, July 2023.
+						  In Proceedings of the 17th USENIX Symposium on Operating Systems Design and Implementation  (<font color="#083b89"><b>OSDI'23</b></font>), Boston, MA, July 2023.
 					  </span>
 				  </div>
 		  </td>
