--- a/pub.html
+++ b/pub.html
@@ -60,6 +60,36 @@ td.papers {
 <table width="90%" align="center" border="0" height="1">
   <!--DWLayoutTable-->
   <tbody>
+	<tr>
+		<td class="date"><font color="#083b89">SOSP'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Automatic Testing for Correct Operations of Cloud Systems</strong> [<a href="pub/acto.pdf" target="_blank">pdf</a> | <a href="pub/acto_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jiawei Tyler Gu, Xudong Sun, Yuxuan Jiang, Chen Wang, Mandana Vaziri, Owolabi Legunsen, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 29th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'23</b></font>), Koblenz, Germany Oct. 2023.
+					  </span>
+				  </div>
+		</td>
+	</tr>  
+	<tr>
+		<td class="date"><font color="#083b89">OSDI'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Relational Debugging -- Pinpointing Root Causes of Performance Problems</strong> [<a href="pub/rdb.pdf" target="_blank">pdf</a> | <a href="pub/rdb_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Xiang (Jenny) Ren, Sitao Wang, Zhuqi Jin, David Lion, Adrian Chiu, Tianyin Xu, and Ding Yuan
+						  <br>
+						  In Proceedings of the 17th USENIX Symposium on Operating Systems Design and Implementation  (<font color="#083b89"><b>OSDI'23</b></font>), Boston, MA, July 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr>  
 	  
 	<tr>
 		<td class="date"><font color="#083b89">HotOS'23</font></td>
@@ -80,22 +110,6 @@ td.papers {
 				  </div>
 		  </td>
 	</tr> 
-	  
-	<tr>
-		<td class="date"><font color="#083b89">OSDI'23</font></td>
-			<td class="papers">
-				  <div align="justify" class="STYLE4">
-					  <p></p>
-						  <span style="font-size: 12pt;">
-						  <strong>Relational Debugging -- Pinpointing Root Causes of Performance Problems</strong> [<a href="pub/rdb.pdf" target="_blank">pdf</a> | <a href="pub/rdb_bib.txt" target="_blank">bib</a>]
-						  <br>
-						  Xiang (Jenny) Ren, Sitao Wang, Zhuqi Jin, David Lion, Adrian Chiu, Tianyin Xu, and Ding Yuan
-						  <br>
-						  In Proceedings of the 17th USENIX Symposium on Operating Systems Design and Implementation  (<font color="#083b89"><b>OSDI'23</b></font>), Boston, MA, July 2023.
-					  </span>
-				  </div>
-		  </td>
-	</tr>  
 	  
 	<tr>
 		<td class="date"><font color="#083b89">ISCA'23</font></td>
