--- a/pub.html
+++ b/pub.html
@@ -70,7 +70,7 @@ td.papers {
 						  <br>
 						  Jiawei Tyler Gu, Xudong Sun, Yuxuan Jiang, Chen Wang, Mandana Vaziri, Owolabi Legunsen, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 29th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'23</b></font>), Koblenz, Germany Oct. 2023.
+						  In Proceedings of the 29th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'23</b></font>), Koblenz, Germany, Oct. 2023.
 					  </span>
 				  </div>
 		</td>
