--- a/pub.html
+++ b/pub.html
@@ -74,7 +74,24 @@ td.papers {
 					  </span>
 				  </div>
 		</td>
-	</tr>  
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">MICRO'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Demystifying CXL Memory with Genuine CXL-Ready Systems and Devices</strong> [<a href="pub/cxl-mem.pdf" target="_blank">pdf</a> | <a href="pub/cxl-mem_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Yan Sun, Yifan Yuan, Zeduo Yu, Chihun Song, Reese Kuper, Jinghan Huang, Houxiang Ji, Siddharth Agarwal, Jiaqi Lou, Ipoom Jeong, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
+						  <br>
+						  In Proceedings of the 56th IEEE/ACM International Symposium on Microarchitecture (MICRO-56) (<font color="#083b89"><b>MICRO-56</b></font>), Toronto, Canada, Oct. 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
+	  
 	<tr>
 		<td class="date"><font color="#083b89">OSDI'23</font></td>
 			<td class="papers">
