--- a/pub.html
+++ b/pub.html
@@ -86,7 +86,7 @@ td.papers {
 						  <br>
 						  Yan Sun, Yifan Yuan, Zeduo Yu, Chihun Song, Reese Kuper, Jinghan Huang, Houxiang Ji, Siddharth Agarwal, Jiaqi Lou, Ipoom Jeong, Ren Wang, Jung Ho Ahn, Tianyin Xu, and Nam Sung Kim
 						  <br>
-						  In Proceedings of the 56th IEEE/ACM International Symposium on Microarchitecture (MICRO-56) (<font color="#083b89"><b>MICRO-56</b></font>), Toronto, Canada, Oct. 2023.
+						  In Proceedings of the 56th IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-56</b></font>), Toronto, Canada, Oct. 2023.
 					  </span>
 				  </div>
 		  </td>
