--- a/pub.html
+++ b/pub.html
@@ -66,9 +66,9 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Automatic Testing for Correct Operations of Cloud Systems</strong> [<a href="pub/acto.pdf" target="_blank">pdf</a> | <a href="pub/acto_bib.txt" target="_blank">bib</a>]
+						  <strong>Acto: Automatic End-to-End Testing of Operation Correctness for Cloud System Management</strong> [<a href="pub/acto.pdf" target="_blank">pdf</a> | <a href="pub/acto_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Jiawei Tyler Gu, Xudong Sun, Yuxuan Jiang, Chen Wang, Mandana Vaziri, Owolabi Legunsen, and Tianyin Xu
+						  Jiawei Tyler Gu, Xudong Sun, Wentao Zhang, Yuxuan Jiang, Chen Wang, Mandana Vaziri, Owolabi Legunsen, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 29th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'23</b></font>), Koblenz, Germany, Oct. 2023.
 					  </span>
