--- a/pub.html
+++ b/pub.html
@@ -66,7 +66,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Acto: Automatic End-to-End Testing of Operation Correctness for Cloud System Management</strong> [<a href="pub/acto.pdf" target="_blank">pdf</a> | <a href="pub/acto_bib.txt" target="_blank">bib</a>]
+						  <strong>Acto: Automatic End-to-End Testing for Operation Correctness of Cloud System Management</strong> [<a href="pub/acto.pdf" target="_blank">pdf</a> | <a href="pub/acto_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Jiawei Tyler Gu, Xudong Sun, Wentao Zhang, Yuxuan Jiang, Chen Wang, Mandana Vaziri, Owolabi Legunsen, and Tianyin Xu
 						  <br>
