--- a/travel.html
+++ b/travel.html
@@ -374,6 +374,7 @@ div.Section1
 						     <li>Bloomington, IN (2021) </li>
                                                      <li>Boston, MA (2019, 2023) </li>
 						     <li>Broomfield, CO (2014) </li>
+						     <li>Buffalo, NY (2023) </li>	  
 						     <li>Carmel-by-the-Sea, CA (2017) </li>
 						     <li>Cheyenne, WY (2018) </li>
                                                      <li>Chicago, IL (many) </li>
@@ -417,6 +418,7 @@ div.Section1
 						     <li>Newark, CA (2017-2018) </li>
 						     <li>New Port, RI (2023) </li>
 						     <li>New York City, NY (2017, 2022) </li>
+						     <li>Niagara Falls, NY (2023) </li>	  
 						     <li>Oakland, CA (2018) </li>
 						     <li>Orlando, FL (2023) </li>
 						     <li>Omaha, NE (2018) </li>
