--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223">CS 423: Operating System Design
 									(<a href="https://cs423-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
 									(<a href="https://cs423-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
+									(<a href="https://cs423-uiuc.github.io/fall23/" target="_blank">Fall 23</a>)
 								</p>
 								<p class="STYLE223">CS 591(SN): Systems Reading Group
 									(<a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">Spring 19</a>)
