--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,7 +86,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Dan Plyukhin</strong>
+            <strong>Daniil Plyukhin</strong>
             <br>
 <!--
                 Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
