--- a/pub.html
+++ b/pub.html
@@ -91,6 +91,22 @@ td.papers {
 				  </div>
 		  </td>
 	</tr> 
+
+	<tr>
+		<td class="date"><font color="#083b89">MobiCom'23</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Virtual Device Farms for Mobile App Testing at Scale: A Pursuit for Fidelity, Efficiency, and Accessibility</strong> [<a href="pub/virtual-device.pdf" target="_blank">pdf</a> | <a href="pub/virtual-device_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Hao Lin, Jiaxing Qiu, Hongyi Wang, Zhenhua Li, Liangyi Gong, Di Gao, Yunhao Liu, Feng Qian, Zhao Zhang, Ping Yang, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 29th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'23</b></font>), Madrid, Spain, Oct. 2023.
+					  </span>
+				  </div>
+		  </td>
+	</tr> 
 	  
 	<tr>
 		<td class="date"><font color="#083b89">OSDI'23</font></td>
