--- a/index.html
+++ b/index.html
@@ -377,7 +377,8 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://systems-seminar-uiuc.github.io/fall21/" target="_blank">Fall 21</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/spring22/" target="_blank">Spring 22</a>)
 									(<a href="https://systems-seminar-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
-									(<a href="https://systems-seminar-uiuc.github.io/spring23/" target="_blank">Spring 23</a>)	
+									(<a href="https://systems-seminar-uiuc.github.io/spring23/" target="_blank">Spring 23</a>)
+									(<a href="https://systems-seminar-uiuc.github.io/fall23/" target="_blank">Fall 23</a>)	
 								</p>
 								<p class="STYLE223">CS 591(SE): Software Engineering Seminar
 									(<a href="https://wiki.illinois.edu/wiki/display/SoftEng" target="_blank">Fall 19</a>)
