--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS student (Fall 2022 - now)</p>
 				                                <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS student (Fall 2022 - now), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a></p>
-				                                <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
+				                                <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Ruowen Qin</a>, MCS student (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
 				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate student (UIUC/NYCU) (Spring 2023 - now)</p>
